// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigate exporter to added product details page from the progress page should take a snapshot of the whole page 1`] = `
<div>
  <div
    class="css-1l99ixu-OuterContainer e4u1u2g0"
  >
    <div
      class="css-n57fe4-InnerContainer e4u1u2g1"
    >
      <div
        class="css-1lzr9ic-StyledRow e4u1u2g0"
      >
        <div
          class="css-1w80l5h-StyledColumn e4u1u2g0"
        >
          <a
            class="e1vcssft0 css-zk98nb-Anchor-StyledHoc e4u1u2g0"
            href="/create-storage-document/storage-documents"
          >
            Back
          </a>
          <h1
            class="e1vcssft0 css-11nzzut-StyledHeader-StyledHoc e4u1u2g0"
          >
            Your Progress
          </h1>
          <h2
            class="govuk-heading progess-h1text e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
            data-testid="sd-progress-heading"
          >
            Storage Document application
            :
            document123
          </h2>
          <br />
          <br />
          <div
            class="task-list-info"
          >
            <h2
              class="govuk-heading-m e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
              data-testid="ApplicationIncomplete-heading"
            >
              Application incomplete
            </h2>
            <p
              data-testid="completedSections"
            >
              You have completed 0 of 6 required sections.
            </p>
          </div>
          <ol
            class="app-task-list e1vcssft0 css-11q1tzs-StyledList-StyledHoc e4u1u2g0"
          >
            <li
              class="e1vcssft0 css-h9lpae-StyledListItem-StyledHoc e4u1u2g0"
            >
              <h2
                class="app-task-list__section e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
                data-testid="Exporter-heading"
              >
                <span
                  class="app-task-list__section-number"
                >
                  1.
                </span>
                Exporter
              </h2>
              <ul
                class="app-task-list__items e1vcssft0 css-11q1tzs-StyledList-StyledHoc e4u1u2g0"
              >
                <div
                  class="grey-border-top"
                />
                <li
                  class="app-task-list__item  e1vcssft0 css-h9lpae-StyledListItem-StyledHoc e4u1u2g0"
                  data-testid="progress-yourReference-wrapper"
                  id="undefined"
                >
                  <a
                    data-testid="progress-yourReference-title"
                    href="/create-storage-document/document123/user-reference"
                  >
                    Your reference
                     (Optional)
                  </a>
                  <strong
                    class="govuk-tag govuk-tag--blue app-task-list__tag"
                    data-testid="progress-yourReference-tag"
                  >
                    INCOMPLETE
                  </strong>
                </li>
                <div
                  class="grey-border-bottom"
                />
                <li
                  class="app-task-list__item  e1vcssft0 css-h9lpae-StyledListItem-StyledHoc e4u1u2g0"
                  data-testid="progress-exporterDetails-wrapper"
                  id="exporter"
                >
                  <a
                    data-testid="progress-exporterDetails-title"
                    href="/create-storage-document/document123/exporter-details"
                  >
                    Exporter details
                  </a>
                  <strong
                    class="govuk-tag govuk-tag--blue app-task-list__tag"
                    data-testid="progress-exporterDetails-tag"
                  >
                    INCOMPLETE
                  </strong>
                </li>
                <div
                  class="grey-border-bottom"
                />
              </ul>
            </li>
            <br />
            <br />
            <li
              class="e1vcssft0 css-h9lpae-StyledListItem-StyledHoc e4u1u2g0"
            >
              <h2
                class="app-task-list__section e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
                data-testid="Products-heading"
              >
                <span
                  class="app-task-list__section-number"
                >
                  2.
                </span>
                Products
              </h2>
              <ul
                class="app-task-list__items e1vcssft0 css-11q1tzs-StyledList-StyledHoc e4u1u2g0"
              >
                <div
                  class="grey-border-top"
                />
                <li
                  class="app-task-list__item  e1vcssft0 css-h9lpae-StyledListItem-StyledHoc e4u1u2g0"
                  data-testid="progress-productDetails-wrapper"
                  id="catches"
                >
                  <a
                    data-testid="progress-productDetails-title"
                    href="/create-storage-document/document123/add-product-to-this-consignment"
                  >
                    Product details
                  </a>
                  <strong
                    class="govuk-tag govuk-tag--blue app-task-list__tag"
                    data-testid="progress-productDetails-tag"
                  >
                    INCOMPLETE
                  </strong>
                </li>
                <div
                  class="grey-border-bottom"
                />
              </ul>
            </li>
            <br />
            <br />
            <li
              class="e1vcssft0 css-h9lpae-StyledListItem-StyledHoc e4u1u2g0"
            >
              <h2
                class="app-task-list__section e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
                data-testid="Storage-facilities-heading"
              >
                <span
                  class="app-task-list__section-number"
                >
                  3.
                </span>
                Storage facilities
              </h2>
              <ul
                class="app-task-list__items e1vcssft0 css-11q1tzs-StyledList-StyledHoc e4u1u2g0"
              >
                <div
                  class="grey-border-top"
                />
                <li
                  class="app-task-list__item  e1vcssft0 css-h9lpae-StyledListItem-StyledHoc e4u1u2g0"
                  data-testid="progress-storageFacilities-wrapper"
                  id="storageFacilities"
                >
                  <a
                    data-testid="progress-storageFacilities-title"
                    href="/create-storage-document/document123/you-have-added-a-storage-facility"
                  >
                    Storage facilities
                  </a>
                  <strong
                    class="govuk-tag govuk-tag--blue app-task-list__tag"
                    data-testid="progress-storageFacilities-tag"
                  >
                    INCOMPLETE
                  </strong>
                </li>
                <div
                  class="grey-border-bottom"
                />
              </ul>
            </li>
            <br />
            <br />
            <li
              class="e1vcssft0 css-h9lpae-StyledListItem-StyledHoc e4u1u2g0"
            >
              <h2
                class="app-task-list__section e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
                data-testid="Transportation-heading"
              >
                <span
                  class="app-task-list__section-number"
                >
                  4.
                </span>
                Transportation
              </h2>
              <ul
                class="app-task-list__items e1vcssft0 css-11q1tzs-StyledList-StyledHoc e4u1u2g0"
              >
                <div
                  class="grey-border-top"
                />
                <li
                  class="app-task-list__item  e1vcssft0 css-h9lpae-StyledListItem-StyledHoc e4u1u2g0"
                  data-testid="progress-exportDestination-wrapper"
                  id="exportDestination"
                >
                  <a
                    data-testid="progress-exportDestination-title"
                    href="/create-storage-document/document123/what-export-destination"
                  >
                    Export destination
                  </a>
                  <strong
                    class="govuk-tag govuk-tag--blue app-task-list__tag"
                    data-testid="progress-exportDestination-tag"
                  >
                    INCOMPLETE
                  </strong>
                </li>
                <div
                  class="grey-border-bottom"
                />
                <li
                  class="app-task-list__item  e1vcssft0 css-h9lpae-StyledListItem-StyledHoc e4u1u2g0"
                  data-testid="progress-transportType-wrapper"
                  id="transportType"
                >
                  <a
                    data-testid="progress-transportType-title"
                    href="/create-storage-document/document123/how-does-the-export-leave-the-uk"
                  >
                    Transport type
                  </a>
                  <strong
                    class="govuk-tag govuk-tag--blue app-task-list__tag"
                    data-testid="progress-transportType-tag"
                  >
                    INCOMPLETE
                  </strong>
                </li>
                <div
                  class="grey-border-bottom"
                />
                <li
                  class="app-task-list__item  e1vcssft0 css-h9lpae-StyledListItem-StyledHoc e4u1u2g0"
                  data-testid="progress-transportDetails-wrapper"
                  id="transportDetails"
                >
                  <span
                    data-testid="progress-transportDetails-title-blocked"
                  >
                    Transport details
                  </span>
                  <strong
                    class="govuk-tag govuk-tag--grey app-task-list__tag"
                    data-testid="progress-transportDetails-tag"
                  >
                    CANNOT START YET
                  </strong>
                </li>
                <div
                  class="grey-border-bottom"
                />
              </ul>
            </li>
          </ol>
          <br />
          <br />
          <div
            class="css-1lzr9ic-StyledRow e4u1u2g0"
          >
            <button
              class="govuk-button govuk-button--secondary css-17uw1q2-StyledButton-StyledHoc e4u1u2g0"
              id="returnToYourDashboard"
              name="returnToYourDashboard"
              type="button"
              value="returnToYourDashboard"
            >
              Return to your dashboard
            </button>
            <button
              class="css-1gc9650-StyledButton-StyledHoc e4u1u2g0"
              id="continue"
            >
              Check your answers and submit
            </button>
          </div>
          <div
            class="css-1lzr9ic-StyledRow e4u1u2g0"
          >
            <div
              class="css-1w80l5h-StyledColumn e4u1u2g0"
            >
              <hr
                class="help-link"
              />
              <h2
                class="e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
              >
                Need help?
              </h2>
              <a
                href="undefined"
                rel="noopener noreferrer"
                target="_blank"
              >
                Get help exporting fish from the UK (gov.uk)
                 
                <span
                  class="govuk-visually-hidden"
                >
                  (opens in new tab)
                </span>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SD ProgressPage should take a snapshot of the whole page when whole data is filled 1`] = `
<div>
  <div
    class="css-1l99ixu-OuterContainer e4u1u2g0"
  >
    <div
      class="css-n57fe4-InnerContainer e4u1u2g1"
    >
      <div
        class="css-1lzr9ic-StyledRow e4u1u2g0"
      >
        <div
          class="css-1w80l5h-StyledColumn e4u1u2g0"
        >
          <a
            class="e1vcssft0 css-zk98nb-Anchor-StyledHoc e4u1u2g0"
            href="/create-storage-document/storage-documents"
          >
            Back
          </a>
          <h1
            class="e1vcssft0 css-11nzzut-StyledHeader-StyledHoc e4u1u2g0"
          >
            Your Progress
          </h1>
          <h2
            class="govuk-heading progess-h1text e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
            data-testid="sd-progress-heading"
          >
            Storage Document application
            :
            document123
          </h2>
          <br />
          <br />
          <div
            class="task-list-info"
          >
            <h2
              class="govuk-heading-m e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
              data-testid="ApplicationIncomplete-heading"
            >
              Application completed
            </h2>
            <p
              data-testid="completedSections"
            >
              You have completed 6 of 6 required sections.
            </p>
          </div>
          <ol
            class="app-task-list e1vcssft0 css-11q1tzs-StyledList-StyledHoc e4u1u2g0"
          >
            <li
              class="e1vcssft0 css-h9lpae-StyledListItem-StyledHoc e4u1u2g0"
            >
              <h2
                class="app-task-list__section e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
                data-testid="Exporter-heading"
              >
                <span
                  class="app-task-list__section-number"
                >
                  1.
                </span>
                Exporter
              </h2>
              <ul
                class="app-task-list__items e1vcssft0 css-11q1tzs-StyledList-StyledHoc e4u1u2g0"
              >
                <div
                  class="grey-border-top"
                />
                <li
                  class="app-task-list__item  e1vcssft0 css-h9lpae-StyledListItem-StyledHoc e4u1u2g0"
                  data-testid="progress-yourReference-wrapper"
                  id="undefined"
                >
                  <a
                    data-testid="progress-yourReference-title"
                    href="/create-storage-document/document123/user-reference"
                  >
                    Your reference
                     (Optional)
                  </a>
                  <strong
                    class="govuk-tag undefined app-task-list__tag"
                    data-testid="progress-yourReference-tag"
                  >
                    COMPLETED
                  </strong>
                </li>
                <div
                  class="grey-border-bottom"
                />
                <li
                  class="app-task-list__item  e1vcssft0 css-h9lpae-StyledListItem-StyledHoc e4u1u2g0"
                  data-testid="progress-exporterDetails-wrapper"
                  id="exporter"
                >
                  <a
                    data-testid="progress-exporterDetails-title"
                    href="/create-storage-document/document123/exporter-details"
                  >
                    Exporter details
                  </a>
                  <strong
                    class="govuk-tag undefined app-task-list__tag"
                    data-testid="progress-exporterDetails-tag"
                  >
                    COMPLETED
                  </strong>
                </li>
                <div
                  class="grey-border-bottom"
                />
              </ul>
            </li>
            <br />
            <br />
            <li
              class="e1vcssft0 css-h9lpae-StyledListItem-StyledHoc e4u1u2g0"
            >
              <h2
                class="app-task-list__section e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
                data-testid="Products-heading"
              >
                <span
                  class="app-task-list__section-number"
                >
                  2.
                </span>
                Products
              </h2>
              <ul
                class="app-task-list__items e1vcssft0 css-11q1tzs-StyledList-StyledHoc e4u1u2g0"
              >
                <div
                  class="grey-border-top"
                />
                <li
                  class="app-task-list__item  e1vcssft0 css-h9lpae-StyledListItem-StyledHoc e4u1u2g0"
                  data-testid="progress-productDetails-wrapper"
                  id="catches"
                >
                  <a
                    data-testid="progress-productDetails-title"
                    href="/create-storage-document/document123/add-product-to-this-consignment"
                  >
                    Product details
                  </a>
                  <strong
                    class="govuk-tag undefined app-task-list__tag"
                    data-testid="progress-productDetails-tag"
                  >
                    COMPLETED
                  </strong>
                </li>
                <div
                  class="grey-border-bottom"
                />
              </ul>
            </li>
            <br />
            <br />
            <li
              class="e1vcssft0 css-h9lpae-StyledListItem-StyledHoc e4u1u2g0"
            >
              <h2
                class="app-task-list__section e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
                data-testid="Storage-facilities-heading"
              >
                <span
                  class="app-task-list__section-number"
                >
                  3.
                </span>
                Storage facilities
              </h2>
              <ul
                class="app-task-list__items e1vcssft0 css-11q1tzs-StyledList-StyledHoc e4u1u2g0"
              >
                <div
                  class="grey-border-top"
                />
                <li
                  class="app-task-list__item  e1vcssft0 css-h9lpae-StyledListItem-StyledHoc e4u1u2g0"
                  data-testid="progress-storageFacilities-wrapper"
                  id="storageFacilities"
                >
                  <a
                    data-testid="progress-storageFacilities-title"
                    href="/create-storage-document/document123/you-have-added-a-storage-facility"
                  >
                    Storage facilities
                  </a>
                  <strong
                    class="govuk-tag undefined app-task-list__tag"
                    data-testid="progress-storageFacilities-tag"
                  >
                    COMPLETED
                  </strong>
                </li>
                <div
                  class="grey-border-bottom"
                />
              </ul>
            </li>
            <br />
            <br />
            <li
              class="e1vcssft0 css-h9lpae-StyledListItem-StyledHoc e4u1u2g0"
            >
              <h2
                class="app-task-list__section e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
                data-testid="Transportation-heading"
              >
                <span
                  class="app-task-list__section-number"
                >
                  4.
                </span>
                Transportation
              </h2>
              <ul
                class="app-task-list__items e1vcssft0 css-11q1tzs-StyledList-StyledHoc e4u1u2g0"
              >
                <div
                  class="grey-border-top"
                />
                <li
                  class="app-task-list__item  e1vcssft0 css-h9lpae-StyledListItem-StyledHoc e4u1u2g0"
                  data-testid="progress-exportDestination-wrapper"
                  id="exportDestination"
                >
                  <a
                    data-testid="progress-exportDestination-title"
                    href="/create-storage-document/document123/what-export-destination"
                  >
                    Export destination
                  </a>
                  <strong
                    class="govuk-tag undefined app-task-list__tag"
                    data-testid="progress-exportDestination-tag"
                  >
                    COMPLETED
                  </strong>
                </li>
                <div
                  class="grey-border-bottom"
                />
                <li
                  class="app-task-list__item  e1vcssft0 css-h9lpae-StyledListItem-StyledHoc e4u1u2g0"
                  data-testid="progress-transportType-wrapper"
                  id="transportType"
                >
                  <a
                    data-testid="progress-transportType-title"
                    href="/create-storage-document/document123/how-does-the-export-leave-the-uk"
                  >
                    Transport type
                  </a>
                  <strong
                    class="govuk-tag undefined app-task-list__tag"
                    data-testid="progress-transportType-tag"
                  >
                    COMPLETED
                  </strong>
                </li>
                <div
                  class="grey-border-bottom"
                />
                <li
                  class="app-task-list__item  e1vcssft0 css-h9lpae-StyledListItem-StyledHoc e4u1u2g0"
                  data-testid="progress-transportDetails-wrapper"
                  id="transportDetails"
                >
                  <a
                    data-testid="progress-transportDetails-title"
                    href=""
                  >
                    Transport details
                  </a>
                  <strong
                    class="govuk-tag undefined app-task-list__tag"
                    data-testid="progress-transportDetails-tag"
                  >
                    COMPLETED
                  </strong>
                </li>
                <div
                  class="grey-border-bottom"
                />
              </ul>
            </li>
          </ol>
          <br />
          <br />
          <div
            class="css-1lzr9ic-StyledRow e4u1u2g0"
          >
            <button
              class="govuk-button govuk-button--secondary css-17uw1q2-StyledButton-StyledHoc e4u1u2g0"
              id="returnToYourDashboard"
              name="returnToYourDashboard"
              type="button"
              value="returnToYourDashboard"
            >
              Return to your dashboard
            </button>
            <button
              class="css-1gc9650-StyledButton-StyledHoc e4u1u2g0"
              id="continue"
            >
              Check your answers and submit
            </button>
          </div>
          <div
            class="css-1lzr9ic-StyledRow e4u1u2g0"
          >
            <div
              class="css-1w80l5h-StyledColumn e4u1u2g0"
            >
              <hr
                class="help-link"
              />
              <h2
                class="e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
              >
                Need help?
              </h2>
              <a
                href="undefined"
                rel="noopener noreferrer"
                target="_blank"
              >
                Get help exporting fish from the UK (gov.uk)
                 
                <span
                  class="govuk-visually-hidden"
                >
                  (opens in new tab)
                </span>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
